Prevents navigation bar current title wrapping.

--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -1,7 +1,7 @@
 .a5e-nav {
     display: grid;
     grid-template-areas: "current list";
-    grid-template-columns: min-content 1fr;
+    grid-template-columns: max-content 1fr;
     grid-template-rows: 100%;
     column-gap: 1rem;
     align-items: center;
